--- a/MothershipDefender2.Plugins.csproj
+++ b/MothershipDefender2.Plugins.csproj
@@ -316,6 +316,7 @@
     <Compile Include="Assets\Standard Assets\ParticleSystems\Scripts\ParticleSystemMultiplier.cs" />
     <Compile Include="Assets\Standard Assets\ParticleSystems\Scripts\SmokeParticles.cs" />
     <Compile Include="Assets\Standard Assets\ParticleSystems\Scripts\WaterHoseParticles.cs" />
+    <Compile Include="Assets\Standard Assets\Utility\FPSCounter.cs" />
     <Compile Include="Assets\Standard Assets\Utility\ObjectResetter.cs" />
   </ItemGroup>
   <ItemGroup>
