remove spaceship_fighter.psd.meta

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ﻿/user.keystore
 /Assets/Spaceship Fighter Falcon XB/Textures/spaceship_fighter.psd
+/Assets/Spaceship Fighter Falcon XB/Textures/spaceship_fighter.psd.meta
 
 
 [Ll]ibrary/
