--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,10 +2,11 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.analytics": "3.6.11",
-    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.analytics": "3.6.12",
+    "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
-    "com.unity.test-framework": "1.1.29",
+    "com.unity.test-framework": "1.1.30",
+    "com.unity.toolchain.linux-x86_64": "0.1.19-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
